# ludumdare

./: Makefile.am  README.md  configure.ac
ld28-singlshot/: .gitignore  Makefile.am  explosion.h  explosion.lolfx  game.cpp  game.h  hud.h  ld28.cpp  ld28.h  singlshot.cpp  singlshot.h  singlshot.vcxproj  singlshot.vcxproj.filters  starfield.h  starfield.lolfx  thing.cpp  thing.h  wave.cpp  wave.h
ld32-sot3000/: .gitignore  Makefile.am  constants.h  final_maps.h  game.cpp  game.h  ld32.cpp  ld32.vcxproj  ld32.vcxproj.filters  level-description.cpp  level-description.h  level-instance.cpp  level-instance.h  level.cpp  level.h  menu.h  sot3000.cpp  sot3000.vcxproj  sot3000.vcxproj.filters  test_maps.h  thing.cpp  thing.h
ld32-sot3000/artwork/: background.xcf  tiles.xcf  title.xcf
ld32-sot3000/data/: 01-walk-in-the-park.txt  02-ups-and-downs.txt  03-blue.txt  04-pink.txt  05-blue-and-pink.txt  06-leap-of-faith.txt  07-getting-serious.txt  08-just-for-fun.txt  09-thy-final-quest.txt  level1.txt  level2.txt  level3.txt  level4.txt  level5.txt  level6.txt  level7.txt  level8.txt  level9.txt  levels.txt  newtiles.xcf  tiles.xcf
ld33-grunx/: .gitignore  Makefile.am  actor.cpp  actor.h  constants.h  game.cpp  game.h  grunx.vcxproj  ld33.cpp  ld33.vcxproj  levelmap.cpp  levelmap.h
ld33-grunx/artwork/: tiles.xcf
ld33-grunx/data/: testmap.tmx  tiles.xcf
ld34-weshgrow/: .gitignore  Makefile.am  constants.h  game.cpp  game.h  levelmap.cpp  levelmap.h  ship.cpp  ship.h  weshgrow.cpp  weshgrow.vcxproj
ld34-weshgrow/artwork/: tiles.xcf
ld34-weshgrow/data/: map1.tmx  map2.tmx  map3.tmx  map4.tmx  map5.tmx  map6.tmx  testmap.tmx  title.tmx
ld35-allturdbeast/: .gitignore  Makefile.am  actor.cpp  actor.h  allturdbeast.cpp  allturdbeast.vcxproj  constants.h  game.cpp  game.h  ld35.cpp  ld35.h  ld35.vcxproj  levelmap.cpp  levelmap.h
ld35-allturdbeast/artwork/: gradient.xcf  tiles.xcf
ld35-allturdbeast/data/: testmap.tmx
ld37/: .gitignore  Makefile.am  compute.py  dither.cpp  ld37.p8  template.p8
ld37-tcs/: .gitignore  Makefile.am  bluenoise.cpp  dither.cpp  label.txt  source.p8  template.p8  the-chamber-scrolls.p8
ld38/: Makefile.am  bluenoise.cpp  dither.cpp  ld38.p8  source.p8  zzlib.p8
ld38/data/: bear.xcf
ld39/: .gitignore  Makefile.am  dither.cpp  ld39.p8  preprocess.sh  source.p8  zzlib.p8
ld40-kabloo8/: kabloo8.p8
ld55/: ld55.p8  pent8cle.p8
