
include $(top_srcdir)/build/autotools/common.am

bin_PROGRAMS = sot3000

sot3000_SOURCES = \
    sot3000.cpp \
    game.cpp game.h \
    level-description.cpp level-description.h \
    level-instance.cpp level-instance.h \
    thing.cpp thing.h \
    test_maps.h final_maps.h \
    constants.h menu.h

sot3000_CPPFLAGS = $(AM_CPPFLAGS)
sot3000_DEPENDENCIES = @LOL_DEPS@

